Desktop menu icon no longer visible during loading

--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ body{
 body a{
 	color: inherit;
 }
+#menu_icon{
+	display: none;
+}
 .fc-mobile-only{
 	display: none;
 }
@@ -401,6 +404,7 @@ body a{
 
 @media (max-width: 600px){
 	#menu_icon{
+		display: block;
 		position: absolute;
 		left: 80vw;
 		top: 40px;
